Signed-off-by: unknown <20111224i705@20111224i705-PC.(none)>

--- a/Myerp/Tpl/Dijie/left_chanpin.html
+++ b/Myerp/Tpl/Dijie/left_chanpin.html
@@ -29,12 +29,15 @@
           <h3 style=" text-align:center; border:none">已截止的产品</h3>
           <h3><span>国内</span></h3>
           <ul id="ul_shortcuts">
-            <li> <a href="<{:SITE_INDEX}>Dijie/index/status/截止/guojing/国内">&nbsp;<span>国内来团</span></a> </li>
+            <li> <a href="<{:SITE_INDEX}>Dijie/index/status/截止/guojing/国内/status_baozhang/未审核">&nbsp;<span>国内来团（未报账）</span></a> </li>
+          </ul>
+          <ul id="ul_shortcuts">
+            <li> <a href="<{:SITE_INDEX}>Dijie/index/status/截止/guojing/国内/status_baozhang/批准">&nbsp;<span>国内来团（已报账）</span></a> </li>
           </ul>
           <h3><span>境外</span></h3>
           <ul id="ul_shortcuts">
-            <li> <a href="<{:SITE_INDEX}>Dijie/index/status/截止/guojing/境外/kind/日本">&nbsp;<span>日本来团</span></a> </li>
-            <li> <a href="<{:SITE_INDEX}>Dijie/index/status/截止/guojing/境外/kind/台湾">&nbsp;<span>台湾来团</span></a> </li>
+            <li> <a href="<{:SITE_INDEX}>Dijie/index/status/截止/guojing/境外/kind/日本/status_baozhang/未审核">&nbsp;<span>日本来团（未报账）</span></a> </li>
+            <li> <a href="<{:SITE_INDEX}>Dijie/index/status/截止/guojing/境外/kind/台湾/status_baozhang/批准">&nbsp;<span>台湾来团（已报账）</span></a> </li>
           </ul>
         </div>
     
