Signed-off-by: unknown <20111224i705@20111224i705-PC.(none)>

--- a/Myerp/Tpl/Caiwu/left_fabu.html
+++ b/Myerp/Tpl/Caiwu/left_fabu.html
@@ -49,6 +49,32 @@
   </div>
 <php>}</php>
 <php>if($pagetype == '营收'){</php>
+
+<php>if($listtype == '员工'){</php>
+  <div id="leftColumn" style="margin-top:7px; width:160px;">
+        <div id="navtab_1" class="leftList">
+          <h3><span>组团部门</span></h3>
+          <ul id="ul_shortcuts">
+            <php>foreach($zutuanlist as $v){</php>
+            <li> <a href="<{:SITE_INDEX}>Caiwu/yingshou_tongji/listtype/员工/departmentID/<{$v['systemID']}>">&nbsp;<span><{$v['title']}></span></a> </li>
+            <php>}</php>
+          </ul>
+          <h3><span>地接部门</span></h3>
+          <ul id="ul_shortcuts">
+            <php>foreach($dijielist as $v){</php>
+            <li> <a href="<{:SITE_INDEX}>Caiwu/yingshou_tongji/listtype/员工/departmentID/<{$v['systemID']}>">&nbsp;<span><{$v['title']}></span></a> </li>
+            <php>}</php>
+          </ul>
+          <h3><span>散客（联合体提供）</span></h3>
+          <ul id="ul_shortcuts">
+            <php>foreach($bumenlist as $v){</php>
+            <li> <a href="<{:SITE_INDEX}>Caiwu/yingshou_tongji/listtype/员工/departmentID/<{$v['systemID']}>">&nbsp;<span>|---<{$v['title']}></span></a> </li>
+            <php>}</php>
+          </ul>
+        </div>
+    
+  </div>
+<php>}else{</php>
   <div id="leftColumn" style="margin-top:7px; width:160px;">
         <div id="navtab_1" class="leftList">
           <h3><span>组团部门</span></h3>
@@ -72,6 +98,7 @@
         </div>
     
   </div>
+<php>}</php>
 <php>}</php>
 
 <php>if($pagetype == '团费'){</php>
