--- a/Myerp/Tpl/Caiwu/tongji_jixiao.html
+++ b/Myerp/Tpl/Caiwu/tongji_jixiao.html
@@ -48,7 +48,7 @@
               </tbody>
             </table>
             <php>}</php>
-            截止11月份之前的数据未做统计（ps：订单审核后才会被当作有效数据）
+            截止11月份之前的数据未做统计（ps：<strong style="color:red">订单审核后才会被当作有效数据</strong>）
             <table cellpadding="0" cellspacing="0" width="100%" class="list view">
               <tbody>
                 <tr class="pagination">
