Signed-off-by: unknown <20111224i705@20111224i705-PC.(none)>

--- a/Myerp/Tpl/Chanpin/zituanxiangmu.html
+++ b/Myerp/Tpl/Chanpin/zituanxiangmu.html
@@ -44,10 +44,16 @@
       <php>}}else{</php>
       <php>if(count(explode('未审核',$vol['shenhe_remark'])) > 1) $alterword = '计调未申请审核！！！';</php>
       <php>if(count(explode('申请',$vol['shenhe_remark'])) > 1) $alterword = '经理未审核！！！';</php>
-      <php>if(count(explode('财务审核',$vol['shenhe_remark'])) > 1) $alterword = '财务已审核通过！！！';</php>
+      <php>if(count(explode('财务',$vol['shenhe_remark'])) > 1) $alterword = '财务已审核通过！！！';</php>
       <input type="button" value="审核" name="button" onclick="alert('<{$alterword}>')" >
       <php>}if(A("Method")->checkshenheback($vol['chanpinID'],'报账项')){</php>
       <input type="button" value=" 审核回退 " name="button" onclick="if(window.confirm('审核回退？')==true)shenhe_back(<{$vol['chanpinID']}>,'报账项');">
+	  <php>}else{</php>
+          <php>if($baozhang['status_shenhe'] != '申请'){</php>
+      <input type="button" value="回退" name="button" onclick="alert('报账单已经审核，无法回退报账项！')" >
+          <php>}else{</php>
+      <input type="button" value="回退" name="button" onclick="alert('您没有权限执行该操作！')" >
+          <php>}</php>
 	  <php>}</php>
             </td>
           </tr>
@@ -96,10 +102,16 @@
       <php>}}else{</php>
       <php>if(count(explode('未审核',$vol['shenhe_remark'])) > 1) $alterword = '计调未申请审核！！！';</php>
       <php>if(count(explode('申请',$vol['shenhe_remark'])) > 1) $alterword = '经理未审核！！！';</php>
-      <php>if(count(explode('财务审核',$vol['shenhe_remark'])) > 1) $alterword = '财务已审核通过！！！';</php>
+      <php>if(count(explode('财务',$vol['shenhe_remark'])) > 1) $alterword = '财务已审核通过！！！';</php>
       <input type="button" value="审核" name="button" onclick="alert('<{$alterword}>')" >
       <php>}if(A("Method")->checkshenheback($vol['chanpinID'],'报账项')){</php>
       <input type="button" value=" 审核回退 " name="button" onclick="if(window.confirm('审核回退？')==true)shenhe_back(<{$vol['chanpinID']}>,'报账项');">
+	  <php>}else{</php>
+          <php>if($baozhang['status_shenhe'] != '申请'){</php>
+      <input type="button" value="回退" name="button" onclick="alert('报账单已经审核，无法回退报账项！')" >
+          <php>}else{</php>
+      <input type="button" value="回退" name="button" onclick="alert('您没有权限执行该操作！')" >
+          <php>}</php>
 	  <php>}</php>
             </td>
           </tr>
