--- a/Myerp/Tpl/Chanpin/zituanbaozhang.html
+++ b/Myerp/Tpl/Chanpin/zituanbaozhang.html
@@ -387,10 +387,16 @@ function shenhe_after(data,status){
       <php>}}else{</php>
       <php>if(count(explode('未审核',$v['shenhe_remark'])) > 1) $alterword = '计调未申请审核！！！';</php>
       <php>if(count(explode('申请',$v['shenhe_remark'])) > 1) $alterword = '经理未审核！！！';</php>
-      <php>if(count(explode('财务审核',$v['shenhe_remark'])) > 1) $alterword = '财务已审核通过！！！';</php>
+      <php>if(count(explode('财务',$v['shenhe_remark'])) > 1) $alterword = '财务已审核通过！！！';</php>
       <input type="button" value="审核" name="button" onclick="alert('<{$alterword}>')" >
       <php>}if(A("Method")->checkshenheback($v['chanpinID'],'报账项')){</php>
       <input type="button" value=" 审核回退 " name="button" onclick="if(window.confirm('审核回退？')==true)shenhe_back(<{$v['chanpinID']}>,'报账项');">
+	  <php>}else{</php>
+          <php>if($baozhang['status_shenhe'] != '申请'){</php>
+      <input type="button" value="回退" name="button" onclick="alert('报账单已经审核，无法回退报账项！')" >
+          <php>}else{</php>
+      <input type="button" value="回退" name="button" onclick="alert('您没有权限执行该操作！')" >
+          <php>}</php>
 	  <php>}</php>
       
           <td scope="row" align="left" valign="top"><input type="checkbox" 
@@ -465,10 +471,16 @@ function shenhe_after(data,status){
       <php>}}else{</php>
       <php>if(count(explode('未审核',$v['shenhe_remark'])) > 1) $alterword = '计调未申请审核！！！';</php>
       <php>if(count(explode('申请',$v['shenhe_remark'])) > 1) $alterword = '经理未审核！！！';</php>
-      <php>if(count(explode('财务审核',$v['shenhe_remark'])) > 1) $alterword = '财务已审核通过！！！';</php>
+      <php>if(count(explode('财务',$v['shenhe_remark'])) > 1) $alterword = '财务已审核通过！！！';</php>
       <input type="button" value="审核" name="button" onclick="alert('<{$alterword}>')" >
       <php>}if(A("Method")->checkshenheback($v['chanpinID'],'报账项')){</php>
       <input type="button" value=" 审核回退 " name="button" onclick="if(window.confirm('审核回退？')==true)shenhe_back(<{$v['chanpinID']}>,'报账项');">
+	  <php>}else{</php>
+          <php>if($baozhang['status_shenhe'] != '申请'){</php>
+      <input type="button" value="回退" name="button" onclick="alert('报账单已经审核，无法回退报账项！')" >
+          <php>}else{</php>
+      <input type="button" value="回退" name="button" onclick="alert('您没有权限执行该操作！')" >
+          <php>}</php>
 	  <php>}</php>
       
           <td scope="row" align="left" valign="top"><input type="checkbox" 
