Signed-off-by: unknown <20111224i705@20111224i705-PC.(none)>

--- a/Myerp/Tpl/Dijie/djtuanxiangmu.html
+++ b/Myerp/Tpl/Dijie/djtuanxiangmu.html
@@ -29,7 +29,7 @@
             <td scope="row" align="left" valign="top"><{$vol['remark']}></td>
             <td scope="row" align="left" valign="top"><strong><{$vol['shenhe_remark']}></strong></td>
             <td scope="row" align="left" valign="top">
-              <input type="button" value="查看" name="button" class="button primary" onClick="showinfo(<{$vol['chanpinID']}>);">
+              <input type="button" value="修改" name="button" class="button primary" onClick="showinfo(<{$vol['chanpinID']}>);">
               <input type="button" value="删除" name="button" class="button primary" onClick="if(window.confirm('要刪除嗎?')==true)deleteSystemItem(<{$vol['chanpinID']}>);" >
       <php>
       $taskom = A("Method")->_checkOMTaskShenhe($vol['chanpinID'],'报账项');
@@ -86,7 +86,7 @@
             <td scope="row" align="left" valign="top"><{$vol['remark']}></td>
             <td scope="row" align="left" valign="top"><strong><{$vol['shenhe_remark']}></strong></td>
             <td scope="row" align="left" valign="top">
-              <input type="button" value="查看" name="button" class="button primary" onClick="showinfo(<{$vol['chanpinID']}>);">
+              <input type="button" value="修改" name="button" class="button primary" onClick="showinfo(<{$vol['chanpinID']}>);">
               <input type="button" value="删除" name="button" class="button primary" onClick="if(window.confirm('要刪除嗎?')==true)deleteSystemItem(<{$vol['chanpinID']}>);" >
               
       <php>
