--- a/Myerp/Tpl/Chanpin/zituanbaozhang.html
+++ b/Myerp/Tpl/Chanpin/zituanbaozhang.html
@@ -392,10 +392,12 @@ function shenhe_after(data,status){
       <php>}if(A("Method")->checkshenheback($v['chanpinID'],'报账项')){</php>
       <input type="button" value=" 审核回退 " name="button" onclick="if(window.confirm('审核回退？')==true)shenhe_back(<{$v['chanpinID']}>,'报账项');">
 	  <php>}else{</php>
-          <php>if($baozhang['status_shenhe'] != '申请'){</php>
+          <php>if($baozhang['status_shenhe'] == '批准'){</php>
       <input type="button" value="回退" name="button" onclick="alert('报账单已经审核，无法回退报账项！')" >
+          <php>}elseif($v['status_shenhe'] == '批准'){</php>
+      <input type="button" value="回退" name="button" onclick="alert('该项目已被批准，只有最后批准人允许回退！！！')" >
           <php>}else{</php>
-      <input type="button" value="回退" name="button" onclick="alert('您没有权限执行该操作！')" >
+      <input type="button" value="回退" name="button" onclick="alert('只有计调权限和没有申请的时候才能回退！')" >
           <php>}</php>
 	  <php>}</php>
       
@@ -476,10 +478,12 @@ function shenhe_after(data,status){
       <php>}if(A("Method")->checkshenheback($v['chanpinID'],'报账项')){</php>
       <input type="button" value=" 审核回退 " name="button" onclick="if(window.confirm('审核回退？')==true)shenhe_back(<{$v['chanpinID']}>,'报账项');">
 	  <php>}else{</php>
-          <php>if($baozhang['status_shenhe'] != '申请'){</php>
+          <php>if($baozhang['status_shenhe'] == '批准'){</php>
       <input type="button" value="回退" name="button" onclick="alert('报账单已经审核，无法回退报账项！')" >
+          <php>}elseif($v['status_shenhe'] == '批准'){</php>
+      <input type="button" value="回退" name="button" onclick="alert('该项目已被批准，只有最后批准人允许回退！！！')" >
           <php>}else{</php>
-      <input type="button" value="回退" name="button" onclick="alert('您没有权限执行该操作！')" >
+      <input type="button" value="回退" name="button" onclick="alert('只有计调权限和没有申请的时候才能回退！')" >
           <php>}</php>
 	  <php>}</php>
       
