--- a/Myerp/Tpl/Chanpin/index.html
+++ b/Myerp/Tpl/Chanpin/index.html
@@ -17,6 +17,7 @@
                 <tr>
                   <td nowrap="nowrap" class="paginationActionButtons"><a id="select_link" href="javascript:void(0)" onclick="showbox(this,'selectitem')">选择&nbsp;<img src="<{:__PUBLIC__}>/myerp/images/MoreDetail.png" ></a>&nbsp;
                     <input class="button" type="button" value=" 复制 " onclick="copytonew()">
+                    <input class="button" type="button" value=" 截止/报名 " onclick="jiezhiorbaoming()">
                   <td nowrap="nowrap" align="right" class="paginationChangeButtons"><{$page}> </td>
                 </tr>
               </tbody>
@@ -64,6 +65,31 @@
 function dosearch(str)
 {
 		window.location = SITE_INDEX+'Chanpin/index'+str;
+}
+
+
+function jiezhiorbaoming()
+{
+	var checkboxitem = new Array();
+	var i = 0;
+	jQuery(".checkboxitem").each(function(index, element) {
+		if(jQuery(this).attr("checked")){
+			checkboxitem[i] = jQuery(this).attr('value');
+			i++;
+		}
+	});
+	if(checkboxitem == ''){
+		ajaxalert('至少选择1项进行操作！');
+		return;
+	}
+	jQuery.ajax({
+		type:	"POST",
+		url:	"<{:SITE_INDEX}>Chanpin/jiezhiorbaoming",
+		data:	"checkboxitem="+checkboxitem,
+		success:function(msg){
+			ThinkAjax.myAjaxResponse(msg,'resultdiv',save_after);
+		}
+	});
 }
 
 function copytonew()
