--- a/Myerp/Tpl/Chanpin/print_danxiangfuwu.html
+++ b/Myerp/Tpl/Chanpin/print_danxiangfuwu.html
@@ -50,7 +50,7 @@
         <td width="20%">&nbsp;接团单位：<{$baozhang['datatext']['jietuandanwei']}></td>
         <td width="20%">&nbsp;部门：<{$zituan['bumen_copy']}></td>
         <td width="10%">&nbsp;天数：<{$zituan['xianlulist']['tianshu']}></td>
-        <td width="10%">&nbsp;人数：<{$zituan['renshu']}></td>
+        <td width="10%">&nbsp;人数：<{$baozhang['renshu']}></td>
       </tr>
       <tr height="28px" >
         <td width="25%">&nbsp;线路：<{$zituan['title_copy']}></td>
@@ -67,7 +67,7 @@
         <td width="20%">&nbsp;发团社：<{$djtuan['fromcompany']}></td>
         <td width="20%">&nbsp;联系人：<{$djtuan['lianxiren']}></td>
         <td width="15%">&nbsp;电话：<{$djtuan['lianxirentelnum']}></td>
-        <td width="10%">&nbsp;人数：<{$djtuan['renshu']}></td>
+        <td width="10%">&nbsp;人数：<{$baozhang['renshu']}></td>
       </tr>
       <tr height="28px" >
         <td>&nbsp;线路：<{$djtuan['title']}></td>
