Signed-off-by: unknown <20111224i705@20111224i705-PC.(none)>

--- a/Myerp/Tpl/Chanpin/print_danxiangfuwu.html
+++ b/Myerp/Tpl/Chanpin/print_danxiangfuwu.html
@@ -349,8 +349,10 @@
         $istrue = A("Method")->_checkbumenshuxing('联合体,办事处','',$baozhang['user_name']);
         if($istrue)
             echo $baozhang['user_name'];
-        else
+        elseif($task[0]['user_name'])    
             echo $task[0]['user_name'];
+        else
+            echo $baozhang['user_name'];
         </PHP>
         </td>
       </tr>
