--- a/Myerp/Tpl/Chanpin/print_danxiangfuwu.html
+++ b/Myerp/Tpl/Chanpin/print_danxiangfuwu.html
@@ -304,7 +304,7 @@
       </td>
       
     </tr>
-			<php>if(count($newlinrun)> 5){dump();</php>
+			<php>if(count($newlinrun)> 5){</php>
     <tr >
       <td align="left" height="28px" style="min-width:150px">
       	<table  border="0" cellspacing="0" cellpadding="0" >
