--- a/Myerp/Tpl/Chanpin/print_danxiangfuwu.html
+++ b/Myerp/Tpl/Chanpin/print_danxiangfuwu.html
@@ -341,7 +341,10 @@
         <td width="20%" align="left"><strong>财务总监：</strong><{$task[3][user_name]}></td>
         <td width="20%" align="left"><strong>财务审核：</strong><{$task[2][user_name]}></td>
         <td width="20%" align="left"><strong>部门经理：</strong>
+        <php>if($doprint == '计调打印'){</php>
         <PHP>if($task[1]['user_name']) echo $task[1][user_name]; else echo $baozhang['manager_copy'];</PHP>
+        <php>}else{</php>
+        <PHP>echo $task[1][user_name];</PHP>
         </td>
         <td width="20%" align="left"><strong>操作人：</strong>
         <PHP>
