Signed-off-by: unknown <20111224i705@20111224i705-PC.(none)>

--- a/Myerp/Tpl/Chanpin/print_danxiangfuwu.html
+++ b/Myerp/Tpl/Chanpin/print_danxiangfuwu.html
@@ -344,7 +344,7 @@
         <php>if($doprint == '计调打印'){</php>
         <PHP>if($task[1]['user_name']) echo $task[1][user_name]; else echo $baozhang['manager_copy'];</PHP>
         <php>}else{</php>
-        <PHP>echo $task[1][user_name];</PHP>
+        <PHP>echo $task[1][user_name];}</PHP>
         </td>
         <td width="20%" align="left"><strong>操作人：</strong>
         <PHP>
