--- a/Myerp/Tpl/Chanpin/print_danxiangfuwu.html
+++ b/Myerp/Tpl/Chanpin/print_danxiangfuwu.html
@@ -23,7 +23,7 @@
   <table width="100%" border="0" align="center" cellpadding="0" cellspacing="0" class="noprint" style="background:#CCCCCC">
     <tbody>
       <tr>
-        <td height="20"><input class="tab" value="打印" onclick="window.print();" type="button">
+        <td height="20"><input class="tab" value="打印" onclick="window.print();" type="button"></td>
       </tr>
     </tbody>
   </table>
@@ -358,6 +358,14 @@
             echo $baozhang['user_name'];
         </PHP>
         </td>
+      </tr>
+    </tbody>
+  </table>
+  
+  <table width="100%" border="0" align="center" cellpadding="0" cellspacing="0">
+    <tbody>
+      <tr>
+        <td height="20"></td>
       </tr>
     </tbody>
   </table>
