--- a/Myerp/Tpl/Caiwu/zituanlist.html
+++ b/Myerp/Tpl/Caiwu/zituanlist.html
@@ -72,14 +72,15 @@
     <table cellpadding="0" cellspacing="0" width="100%" class="list view">
       <tbody>
         <tr class="pagination">
-          <td colspan="11"><table cellpadding="0" cellspacing="0" width="100%" class="paginationTable">
+          <td colspan="11">
+          <table cellpadding="0" cellspacing="0" width="100%" class="paginationTable">
               <tbody>
                 <tr>
-                  <td nowrap="nowrap" class="paginationActionButtons"><a id="select_link" href="javascript:void(0)" onclick="showbox(this,'selectitem')">选择&nbsp;<img src="<{:__PUBLIC__}>/myerp/images/MoreDetail.png" ></a>&nbsp;
-                  <td nowrap="nowrap" align="right" class="paginationChangeButtons"><{$page}> </td>
+                  <td nowrap="nowrap" align="right" class="paginationChangeButtons" style="color:#090"><{$page}></td>
                 </tr>
               </tbody>
-            </table></td>
+            </table>
+            </td>
         </tr>
         <tr height="20">
           <th scope="col" nowrap="nowrap"><div> 序号 </div></th>
@@ -109,6 +110,17 @@
         <td scope="row" align="center" valign="top"><img onclick="showmessage(this,'<{$v['chanpinID']}>','线路','操作记录');showbox(this,'messageitem','r')" src="<{:__PUBLIC__}>/myerp/images/info_inline.gif" width="16" height="16" border="0" /></td>
       </tr>
       <php> }</php>
+        <tr class="pagination">
+          <td colspan="11">
+          <table cellpadding="0" cellspacing="0" width="100%" class="paginationTable">
+              <tbody>
+                <tr>
+                  <td nowrap="nowrap" align="right" class="paginationChangeButtons" style="color:#090"><{$page}></td>
+                </tr>
+              </tbody>
+            </table>
+            </td>
+        </tr>
         </tbody>
       
     </table>
