Signed-off-by: unknown <20111224i705@20111224i705-PC.(none)>

--- a/Myerp/Tpl/Index/search_zituan.html
+++ b/Myerp/Tpl/Index/search_zituan.html
@@ -32,7 +32,9 @@
                           <td nowrap="nowrap"><input type="text" class="title_1" value="<{$title}>"></td>
                           <td scope="row" nowrap="nowrap"> 团期 </td>
                           <td nowrap="nowrap">
-                          <input type="text" onfocus="WdatePicker()" class="chutuanriqi" value="<{$chutuanriqi}>" >
+                          <input type="text" onfocus="WdatePicker()" class="chutuanriqi" value="<{$chutuanriqi}>" ></td>
+                          <td scope="row" nowrap="nowrap"> 团号 </td>
+                          <td nowrap="nowrap"><input type="text" class="tuanhao_1" value="<{$tuanhao}>"/></td>
                       </tbody>
                     </table>
                 </div>
@@ -52,8 +54,12 @@
                           <input type="text" onfocus="WdatePicker()" class="start_time" value="<{$start_time}>">
                           <span>--</span>
                           <input type="text" onfocus="WdatePicker()" class="end_time" value="<{$end_time}>"></td>
+                          <td scope="row" nowrap="nowrap"> 团号 </td>
+                          <td nowrap="nowrap"><input type="text" class="tuanhao_2" value="<{$tuanhao}>"/></td>
                           <td scope="row" nowrap="nowrap"> 创建人 </td>
                           <td nowrap="nowrap"><input type="text" class="user_name" value="<{$user_name}>"/></td>
+                        </tr>
+                        <tr>
                           <td scope="row" nowrap="nowrap"> 状态 </td>
                           <td nowrap="nowrap">
                         <select class="status"> 
@@ -66,10 +72,6 @@
                             <option value="截止">截止</option> 
                         </select>
                           </td>
-                        </tr>
-                        <tr>
-                          <td scope="row" nowrap="nowrap"> 团号 </td>
-                          <td nowrap="nowrap"><input type="text" class="tuanhao" value="<{$tuanhao}>"/></td>
                           <td scope="row" nowrap="nowrap"> 产品分类（日本，韩国等） </td>
                           <td nowrap="nowrap"><input type="text" class="kind_copy" value="<{$kind_copy}>"/></td>
                         </tr>
@@ -155,7 +157,8 @@ function clearsearch(){
 		jQuery('.end_time').val('');
 		jQuery('.user_name').val('');
 		jQuery('.status').val('');
-		jQuery('.tuanhao').val('');
+		jQuery('.tuanhao_1').val('');
+		jQuery('.tuanhao_2').val('');
 		jQuery('.kind_copy').val('');
 		jQuery('.chutuanriqi').val('');
 }
@@ -164,6 +167,8 @@ function _dosearch(sorttabid){
 	var str ='';
 	if(jQuery('.title_'+sorttabid).val())
 	str += '/title/'+jQuery('.title_'+sorttabid).val();
+	if(jQuery('.tuanhao_'+sorttabid).val())
+	str += '/tuanhao/'+jQuery('.tuanhao_'+sorttabid).val();
 	if(jQuery('.chufariqi').val())
 	str += '/chufariqi/'+jQuery('.chufariqi').val();
 	if(jQuery('.start_time').val())
@@ -174,8 +179,8 @@ function _dosearch(sorttabid){
 	str += '/user_name/'+jQuery('.user_name').val();
 	if(jQuery('.status').val())
 	str += '/status/'+jQuery('.status').val();
-	if(jQuery('.tuanhao').val())
-	str += '/tuanhao/'+jQuery('.tuanhao').val();
+//	if(jQuery('.tuanhao').val())
+//	str += '/tuanhao/'+jQuery('.tuanhao').val();
 	if(jQuery('.kind_copy').val())
 	str += '/kind_copy/'+jQuery('.kind_copy').val();
 	if(jQuery('.chutuanriqi').val())
