Signed-off-by: unknown <20111224i705@20111224i705-PC.(none)>

--- a/Myerp/Tpl/Chanpin/dingdanxinxi.html
+++ b/Myerp/Tpl/Chanpin/dingdanxinxi.html
@@ -56,16 +56,6 @@ function quxiao_after(data,status){
 	}
 }
 
-function dofukuan(id){
-	jQuery("#ispay"+id).val('已付款');
-	scroll(0,0);
-	ThinkAjax.sendForm('form1',SITE_INDEX+'Xiaoshou/dopostdingdanxinxi/daokuanqueren/1',doComplete,'resultdiv');
-}
-
-function querendingdan(){
-	jQuery("#status").val('确认');
-	ThinkAjax.sendForm('form2',SITE_INDEX+'Xiaoshou/dopostdingdanxinxi/',doComplete,'resultdiv');
-}
 </script>
 
 
@@ -249,6 +239,7 @@ function querendingdan(){
           <td align="left" style="height: 32px"> 付款状态/付款确认 </td>
           <td align="left" style="height: 32px"> 客户类型 </td>
           <td align="left" style="height: 32px"> 详细资料： </td>
+          <td align="left" style="height: 32px"> 操作： </td>
         </tr>
        <php>$i = 0; foreach($tuanyuan as $vo){$i++;</php>
        <input type="hidden" name="tuanyuanID<{$i}>" value="<{$vo['id']}>" />
@@ -299,13 +290,17 @@ function querendingdan(){
            <input type="hidden" name="ispay<{$i}>" id="ispay<{$vo[id]}>" <php>if(!$vo['ispay']){</php> value="未付款" <php>}</php> value="<{$vo['ispay']}>"/>
             <input style="width:60px;" class="button" type="button" value=" 确认 " onclick="dofukuan(<{$vo[id]}>)">
           </td>
-          <td align="left" style="height: 32px"><php>if($vo[laokehu] == 0) echo '新客户' ;else echo '老客户';</php></td>
+          <td align="left" style="height: 32px"><input type="hidden" name="is_leader<{$i}>" id="is_leader<{$vo[id]}>" value="<{$vo['is_leader']}>"><php>if($vo['is_leader'] == '领队') echo '领队';else{if($vo[laokehu] == 0) echo '新客户' ;else echo '老客户';}</php></td>
           <td align="left" style="height: 32px">
           <php>if($vo['id']){</php>
           <a href="javascript:TravelerDetail(<{$vo['id']}>)">查看</a>
           <php>}else{</php>
           <a href="javascript:TravelerDetail('')">查看</a>
           <php>}</php>
+          </td>
+          <td align="left" style="height: 32px">
+            <input type="button" value="领队/团员" name="button" class="button primary" onclick="if(window.confirm('确定设置？')==true)lingduiortuanyuan(<{$vo['id']}>);">
+            <input type="button" value="取消参团" name="button" class="button primary" onclick="if(window.confirm('确定取消？')==true)quxiaocantuan(<{$vo['id']}>);">
           </td>
         </tr>
         <php>}</php>
@@ -328,6 +323,7 @@ function querendingdan(){
           <td align="left" style="height: 32px"> 付款状态/付款确认 </td>
           <td align="left" style="height: 32px"> 客户类型 </td>
           <td align="left" style="height: 32px"> 详细资料： </td>
+          <td align="left" style="height: 32px"> 操作： </td>
         </tr>
        <php>$i = 0; foreach($tuanyuan as $vo){$i++;</php>
        <input type="hidden" name="tuanyuanID<{$i}>" value="<{$vo['id']}>" />
@@ -381,13 +377,17 @@ function querendingdan(){
            <input type="hidden" name="ispay<{$i}>" id="ispay<{$vo[id]}>" <php>if(!$vo['ispay']){</php> value="未付款" <php>}</php> value="<{$vo['ispay']}>"/>
             <input style="width:60px;" class="button" type="button" value=" 确认 " onclick="dofukuan(<{$vo[id]}>)">
           </td>
-          <td align="left" style="height: 32px"><php>if($vo[laokehu] == 0) echo '新客户' ;else echo '老客户';</php></td>
+          <td align="left" style="height: 32px"><input type="hidden" name="is_leader<{$i}>" id="is_leader<{$vo[id]}>" value="<{$vo['is_leader']}>"><php>if($vo['is_leader'] == '领队') echo '领队';else{if($vo[laokehu] == 0) echo '新客户' ;else echo '老客户';}</php></td>
           <td align="left" style="height: 32px">
           <php>if($vo['id']){</php>
           <a href="javascript:TravelerDetail(<{$vo['id']}>)">查看</a>
           <php>}else{</php>
           <a href="javascript:TravelerDetail('')">查看</a>
           <php>}</php>
+          </td>
+          <td align="left" style="height: 32px">
+            <input type="button" value="领队/团员" name="button" class="button primary" onclick="if(window.confirm('确定设置？')==true)lingduiortuanyuan(<{$vo['id']}>);">
+            <input type="button" value="取消参团" name="button" class="button primary" onclick="if(window.confirm('确定取消？')==true)quxiaocantuan(<{$vo['id']}>);">
           </td>
         </tr>
         <php>}</php>
