Signed-off-by: unknown <20111224i705@20111224i705-PC.(none)>

--- a/Myerp/Tpl/Xiaoshou/dingdanxinxi.html
+++ b/Myerp/Tpl/Xiaoshou/dingdanxinxi.html
@@ -250,11 +250,11 @@ function quxiao_after(data,status){
           <td align="left" style="height: 32px"> 证件类型： </td>
           <td align="left" style="height: 32px"> 证件号码： </td>
           <td align="left" style="height: 32px"> 应付： </td>
-          <td align="left" style="height: 32px"> 备注： </td>
-          <td align="left" style="height: 32px"> 付款状态/付款确认 </td>
-          <td align="left" style="height: 32px"> 客户类型 </td>
-          <td align="left" style="height: 32px"> 详细资料： </td>
-          <td align="left" style="height: 32px"> 操作： </td>
+          <td align="left" style="height: 32px; min-width:80px;"> 备注： </td>
+          <td align="left" style="height: 32px; min-width:180px;"> 付款状态/付款确认 </td>
+          <td align="left" style="height: 32px; min-width:60px;"> 客户类型 </td>
+          <td align="left" style="height: 32px; min-width:60px;"> 详细资料： </td>
+          <td align="left" style="height: 32px; min-width:180px;"> 操作： </td>
         </tr>
        <php>$i = 0; foreach($tuanyuan as $vo){$i++;</php>
        <input type="hidden" name="tuanyuanID<{$i}>" value="<{$vo['id']}>" />
@@ -334,11 +334,11 @@ function quxiao_after(data,status){
           <td align="left" style="height: 32px"> 户籍地： </td>
           <td align="left" style="height: 32px"> 证件有效期： </td>
           <td align="left" style="height: 32px"> 应付： </td>
-          <td align="left" style="height: 32px"> 备注： </td>
-          <td align="left" style="height: 32px"> 付款状态/付款确认 </td>
-          <td align="left" style="height: 32px"> 客户类型 </td>
-          <td align="left" style="height: 32px"> 详细资料： </td>
-          <td align="left" style="height: 32px"> 操作： </td>
+          <td align="left" style="height: 32px; min-width:80px;"> 备注： </td>
+          <td align="left" style="height: 32px; min-width:180px;"> 付款状态/付款确认 </td>
+          <td align="left" style="height: 32px; min-width:60px;"> 客户类型 </td>
+          <td align="left" style="height: 32px; min-width:60px;"> 详细资料： </td>
+          <td align="left" style="height: 32px; min-width:180px;"> 操作： </td>
         </tr>
        <php>$i = 0; foreach($tuanyuan as $vo){$i++;</php>
        <input type="hidden" name="tuanyuanID<{$i}>" value="<{$vo['id']}>" />
